Amend comments